# CPP-Examples

./: .gitignore
AbstractFactory-Example/: ConcreteFactory1.cpp  ConcreteFactory1.h  ConcreteFactory2.h  ConcreteProductA2.cpp  ConcreteProductB2.cpp  ConcreteProductB2.h  main.cpp
BehavioralPatterns/ChainOfResponsibility-Example/: AbstractHandler.h  Handlers.cpp  main.cpp
BehavioralPatterns/Command-Example/: ComplexCommand.h  Invoker.cpp  Receiver.cpp  Receiver.h  SimpleCommand.cpp  SimpleCommand.h
BehavioralPatterns/Iterator-Example/: Container.h  CustomClass.cpp
BehavioralPatterns/Mediator-Example/: CMakeLists.txt  Component2.h  MediatorInterface.h
BehavioralPatterns/Memento-Example/: Caretaker.h  ConcreteMemento.cpp  ConcreteMemento.h  MementoInterface.h  Originator.cpp  Originator.h
BehavioralPatterns/Observer-Example/: CMakeLists.txt  Subject.cpp  main.cpp
BehavioralPatterns/State-Example/: CMakeLists.txt  Context.cpp  Context.h  main.cpp
BehavioralPatterns/Strategy-Example/: CMakeLists.txt  Context.h  StrategyInterface.h  main.cpp
BehavioralPatterns/TemplateMethod-Example/: ConcreteClass1.cpp  ConcreteClass1.h  ConcreteClass2.cpp  ConcreteClass2.h
BehavioralPatterns/Visitor-Example/: ConcreteComponentA.cpp  ConcreteComponentB.cpp  ConcreteComponentB.h  VisitorInterface.h  main.cpp
Builder-Example/: CMakeLists.txt  ConcreteBuilderX.h  ConcreteBuilderY.cpp  ConcreteBuilderY.h  Director.cpp  Product.cpp  Product.h  main.cpp
CreationalPatterns/AbstractFactory-Example/: AbstractFactory.h  AbstractProductA.h  AbstractProductB.h  CMakeLists.txt  ConcreteProductA1.h  ConcreteProductA2.h
CreationalPatterns/Builder-Example/: AbstractBuilder.h  CMakeLists.txt  ConcreteBuilderX.cpp  Director.cpp  Director.h
CreationalPatterns/FactoryMethod-Example/: ConcreteCreator1.cpp  SimpleFactoryMethod.cpp  SimpleFactoryMethod.h
CreationalPatterns/ObjectPool-Example/: CMakeLists.txt  ObjectPool.h  main.cpp
CreationalPatterns/Prototype-Example/: AbstractPrototype.cpp  AbstractPrototype.h  CMakeLists.txt  ConcretePrototype1.h  ConcretePrototype2.cpp  PrototypeFactory.cpp  PrototypeFactory.h  main.cpp
CreationalPatterns/Singleton-Example/: CMakeLists.txt  SafeSingleton.cpp  SafeSingleton.h  SimpleSingleton.cpp  main.cpp
DataStructs/Deque-Example/: CMakeLists.txt  Deque.h  main.cpp
DataStructs/OneLinkedList-Example/: CMakeLists.txt  OneLinkedList.h  main.cpp
DataStructs/RingBuffer-Example/: CMakeLists.txt  RingBuffer.h  main.cpp
DataStructs/Stack-Example/: CMakeLists.txt  Stack.h  main.cpp
DataStructs/TwoLinkedList-Example/: CMakeLists.txt  TwoLinkedList.h  main.cpp
DataStructs/UnidirectionalQueue-Example/: CMakeLists.txt  UnidirectionalQueue.h  main.cpp
DataStructs/Vector-Example/: CMakeLists.txt  Vector.h  main.cpp
Errors/: README.md
Errors/Deadlock-Example/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp
Errors/Livelock-Example/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp
Errors/LockConvoy-Example/: CMakeLists.txt  main.cpp
Errors/NameHiding-Example/: main.cpp  (+4 more)
FactoryMethod-Example/: AbstractCreator.cpp  ConcreteCreator1.h  ConcreteCreator2.h  ConcreteProduct2.h  main.cpp
Idioms/: README.md
Idioms/Attorney-Client-Example/: AbstractBase.h  Attorney.cpp  Attorney.h  CMakeLists.txt  ConcreteClass.cpp  ConcreteClass.h  main.cpp
Idioms/CVDI-Example/: AbstractBase.cpp  AbstractBase.h  CMakeLists.txt  ConcreteClass.cpp  ConcreteClass.h  main.cpp
Idioms/CapabilityQuery-Example/: CMakeLists.txt  ConcreteClass1.cpp  ConcreteClass1.h  ConcreteClass2.cpp  ConcreteClass2.h  IFirst.h  ISecond.h  main.cpp
Idioms/Return-Type-Resolver-Example/: CMakeLists.txt  main.cpp
Idioms/Virtual-Constructor-Example/: AbstractTarget.h  CMakeLists.txt  ConcreteTarget.cpp  ConcreteTarget.h  main.cpp
Language/Initialization-Example/: CMakeLists.txt  Example1.h  Example2.h  Example3.h  main.cpp
Language/Preprocessor-Directives-Example/: CMakeLists.txt  Definations.h  Example1.h  Example1A.cpp  Example1B.cpp  Example2.h  Example3.h  main.cpp
Language/Union-Example/: CMakeLists.txt  Example1.h  Example2.h  Example3.h  Example4.h  Example5.h  Example6.h  main.cpp
LanguageOptimization/: README.md
LanguageOptimization/RVO-Example/: CMakeLists.txt  SomeClass.cpp  main.cpp
LanguageOptimization/SOO-Example/: CMakeLists.txt  main.cpp
LanguageRules/: README.md
ObjectPool-Example/: ObjectPool.cpp  Resource.cpp  Resource.h
OtherPatterns/DependencyInjection-Example/: CMakeLists.txt  Logic.cpp  Logic.h  Target.h  main.cpp
Others/Extern-Example/: CMakeLists.txt  Example0.h  Example2.cpp  Example3.h  main.cpp
Others/Inline-Example/: CMakeLists.txt  Example1.h  main.cpp
Others/Move-Semantics-Example/: CMakeLists.txt  Example4.h  main.cpp
Others/OOP-Example/: CMakeLists.txt  Example10.h  Example11.h  Example2.h  Example5.h  Example6.h  Example8.h  Example9.h  main.cpp
Prototype-Example/: AbstractPrototype.cpp  ConcretePrototype1.h  ConcretePrototype2.h
RulesAndMechanisms/: README.md
RulesAndMechanisms/FD-Example/: CMakeLists.txt  SomeClass1.cpp  SomeClass1.h  SomeClass2.cpp
Singleton-Example/: SafeSingleton.h  SimpleSingleton.h
Sorts/InsertionSort-Example/: CMakeLists.txt  main.cpp
StandartLibrary/STL-AlgorithmsLibrary-Example/: CMakeLists.txt  Example1.h  Example10.h  Example11.h  Example12.h  Example2.h  Example3.h  Example4.h  Example5.h  Example6.h  Example7.h  Example8.h  Example9.h  Other.h  main.cpp
StandartLibrary/STL-ConcurrencySupportLibrary-Example/: CMakeLists.txt  Example1.h  Example10.h  Example5.h  Example7.h  Other.h  main.cpp
StandartLibrary/STL-ContainersLibrary-Example/: CMakeLists.txt  Example1.h  Example2.h  Example3.h  Example4.h  SomeClass.cpp  SomeClass.h  array.cpp  deque.cpp  forward_list.cpp  list.cpp  main.cpp  map.cpp  multi_map.cpp  multi_set.cpp  set.cpp  unordered_map.cpp  unordered_set.cpp  vector.cpp
StandartLibrary/STL-MetaprogrammingLibrary-Example/: CMakeLists.txt  Example1.h  Example2.h  Example3.h  Example4.h  Example5.h  Example6.h  Example7.h  Example8.h  Example9.h  Other.h  main.cpp
(+482 files in other folders)
